--- a/Oppgave3/oppgave2/package.json
+++ b/Oppgave3/oppgave2/package.json
@@ -2,13 +2,25 @@
   "name": "oppgave2",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "babel.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel": "babel main.js --presets@babel/preset-env --out-dir lib"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
