--- a/Oppgave5/.eslintrc.json
+++ b/Oppgave5/.eslintrc.json
@@ -106,9 +106,11 @@
         {
           "trailingComma": "es5",
           "singleQuote": true,
-          "printWidth": 80
+          "printWidth": 80,
+          "endOfLine": "auto"
         }
       ],
+      "prettier/prettier": 0,
       "jsx-a11y/href-no-hash": "off",
       "jsx-a11y/anchor-is-valid": [
         "warn",
