--- a/Oppgave6/client/package.json
+++ b/Oppgave6/client/package.json
@@ -5,7 +5,10 @@
   "main": "main.js",
   "scripts": {
     "dev": "webpack serve --config webpack.development.config.js --mode development",
-    "clean": "rm -rf public"
+    "clean": "rm -rf public",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -32,7 +35,10 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "html-webpack-plugin": "^4.5.0",
+      "jest": "^26.6.3",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "sass-loader": "^10.0.3",
